--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -51,8 +51,9 @@
 
         </div>
 
-        <script src="/content/js/uml-editor/UmlEditorBundled.js">
+        <script src="/content/js/uml-editor/UmlEditorBundled.js"></script>
 
+        <script>
             var Repository = angular.element('*[ng-app]').injector().get("Repository");
             var RepositoryFile = angular.element('*[ng-app]').injector().get("RepositoryFile");
            // var parentController = angular.element(document.getElementById('uml-editor-root')).scope();
