--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -1,4 +1,4 @@
-<div class="editor-wrapper" id="uml-editor-root">
+<div class="editor-wrapper" id="uml-editor-container">
 
     <link rel="stylesheet" href="/static/uml-editor/css/style.css">
     <link rel="stylesheet" href="/static/uml-editor/css/uml-type.css">
@@ -7,7 +7,7 @@
 
     <nav class="navbar navbar-default editor-top" role="navigation">
         <div class="">
-            <div class="navbar-header" >
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" ng-click="vm.toggleNavbar()">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -25,18 +25,8 @@
 
                 <div class=" navbar-nav navbar-right">
 
-                    <!--
                     <result participation="$ctrl.participation" ng-hide="$ctrl.isBuilding"
                             on-new-result="$ctrl.updateLatestResult($event)" show-score="true"></result>
-                    <button type="button" class="btn btn-primary navbar-btn"
-                            ng-disabled="!$ctrl.isSaved || $ctrl.isBuilding" ng-click="$ctrl.commit($event)"
-                            ng-switch="$ctrl.isBuilding" tooltip-placement="left"
-                            uib-tooltip="Stage, commit, push, build and test your changes.">
-                        <span ng-switch-when="true"><i class="fa fa-circle-o-notch fa-spin"></i> Building</span>
-                        <span ng-switch-default><i class="fa fa-play-circle-o"></i> Commit & Run Tests</span>
-                    </button>
-
-                    -->
                 </div>
 
             </div>
@@ -58,82 +48,87 @@
 
             function start() {
 
-            var Repository = angular.element('*[ng-app]').injector().get("Repository");
-            var RepositoryFile = angular.element('*[ng-app]').injector().get("RepositoryFile");
-
-            var url = window.window.location.href;
-            var urlIndex = url.lastIndexOf('/');
-            var participationId = Number(url.substring(urlIndex + 1));
-            console.log("ParticipationId" +participationId);
+                var Repository = angular.element('*[ng-app]').injector().get("Repository");
+                var RepositoryFile = angular.element('*[ng-app]').injector().get("RepositoryFile");
 
 
-            // store url on load
-            var currentPage = window.location.href;
+                var controller = angular.element(document.getElementById("uml-editor-container")).controller('umleditor');
 
 
+                console.log("controller ");
+                console.log(controller);
+
+                var url = window.location.href;
+                var urlIndex = url.lastIndexOf('/');
+                var participationId = Number(url.substring(urlIndex + 1));
+                console.log("ParticipationId" + participationId);
 
 
-            //
-            // Function to load the file
-            //
-            function loadFile(successCallback, errorCallback) {
-                RepositoryFile.get({
+                // store url on load
+                var currentPage = window.location.href;
+
+
+                //
+                // Function to load the file
+                //
+                function loadFile(successCallback, errorCallback) {
+                    RepositoryFile.get({
+                            participationId: participationId,
+                            file: "submission.json"
+                        }, function (fileObj) {
+                            try {
+                                successCallback(JSON.parse(fileObj.fileContent))
+                            } catch (e) {
+                                errorCallback(e)
+                            }
+                        },
+                        function (error) {
+                            errorCallback(error)
+                        }
+                    );
+                }
+
+
+                //
+                //
+                //
+                function saveAndCommitFile(umlDocumentAsJson, successCallback, errorCallback) {
+
+                    RepositoryFile.update({
                         participationId: participationId,
                         file: "submission.json"
-                    }, function (fileObj) {
-                        try {
-                            successCallback(JSON.parse(fileObj.fileContent))
-                        } catch (e) {
-                            errorCallback(e)
-                        }
-                    },
-                    function (error) {
-                        errorCallback(error)
-                    }
-                );
-            }
+                    }, JSON.stringify(umlDocumentAsJson), function () {
+                        console.log("Saved file");
 
+                        Repository.commit({
+                            participationId: participationId
+                        }, {}, function () {
+                            console.log('comitted');
+                            successCallback()
+                        }, function (err) {
+                            console.log(err);
+                            errorCallback(err)
+                        });
 
-            //
-            //
-            //
-            function saveAndCommitFile(umlDocumentAsJson, successCallback, errorCallback) {
-
-                RepositoryFile.update({
-                    participationId: participationId,
-                    file: "submission.json"
-                }, JSON.stringify(umlDocumentAsJson), function () {
-                    console.log("Saved file");
-
-                    Repository.commit({
-                        participationId: participationId
-                    }, {}, function () {
-                        console.log('comitted');
-                        successCallback()
                     }, function (err) {
                         console.log(err);
                         errorCallback(err)
-                    });
-
-                }, function (err) {
-                    console.log(err);
-                    errorCallback(err)
-                })
+                    })
 
 
-            } // End save Function
+                } // End save Function
 
 
-            UmlClassEditor.startUmlEditor(loadFile, saveAndCommitFile, null, true);
+                UmlClassEditor.startUmlEditor(loadFile, saveAndCommitFile, null, true);
 
             }
 
 
-            if (window.location.href.indexOf("umleditor") !== -1){ // means string.contains("umleditor)
+            if (window.location.href.indexOf("umleditor") !== -1) { // means string.contains("umleditor)
                 start();
             } else {
-               var startOnHashChanged = function () {
-                    if (window.location.href.indexOf("umleditor") !== -1){ // means string.contains("umleditor)
+                var startOnHashChanged = function () {
+                    if (window.location.href.indexOf("umleditor") !== -1) { // means string.contains("umleditor)
                         start();
                     }
 
