--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -49,11 +49,14 @@
 
     </div>
 
+    <button id="panelInstructionMaximizer" class="btn btn-primary navbar-btn" style="position: fixed; right: 0; top: 30%; -ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg);transform-origin: right bottom;">
+        <span><i class="glyphicon glyphicon glyphicon-list-alt"></i> &nbsp; Instructions &nbsp;</span>
+    </button>
 
-    <div id="panelInstructions" style="width: 200px; height: 80%; position:fixed; right: 0; bottom: 10%; top:10%;"
+    <div id="panelInstructions" style="width: 300px; height: 80%; position:fixed; right: 0; bottom: 10%; top:10%;"
          class="panel panel-primary" resizable r-directions="['left']" r-width="$ctrl.initialInstructionsWidth">
         <div class="panel-heading">
-            <span class="pull-right "><i class="glyphicon glyphicon-chevron-right"></i></span>
+            <span class="pull-right" id="instructionsCollapseButton"><i class="glyphicon glyphicon-chevron-right"></i></span>
             <h3 class="panel-title">
                 <i class="glyphicon glyphicon glyphicon-list-alt"></i>
                 <span> &nbsp; Instructions &nbsp; </span>
@@ -71,8 +74,12 @@
     <script>
         var saveButton = $("#umlSaveButton");
         var saveButtonText = $("#umlSaveButtonText");
-        var realContainer = $("#panelInstructions");
+        var instructionsContainer = $("#panelInstructions");
         var instructionsMarkDown = $("#instructionsMarkdown");
+        var instructionsCollapseButton = $("#instructionsCollapseButton");
+        var instructionsMaximizerButton = $("#panelInstructionMaximizer");
+        var lastInstructionContainerWidth = "300";
+
 
         function start() {
 
@@ -179,6 +186,17 @@
 
             saveButton.click(function () {
                 saveTrigger();
+            });
+
+            instructionsCollapseButton.click(function () {
+                lastInstructionContainerWidth = instructionsContainer.css("width");
+               instructionsContainer.animate({width: '0px'}, 200, function () {
+                   instructionsContainer.css({visibility:"hidden"})
+               });
+            });
+            instructionsMaximizerButton.click(function(){
+                instructionsContainer.css({visibility:"visible"});
+                instructionsContainer.animate({width: lastInstructionContainerWidth});
             });
 
             instructionsMarkDown.html(markdown.render('Loading ...'));
