Show Readme with ms support

--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -49,7 +49,7 @@
 
     </div>
 
-    <button id="panelInstructionMaximizer" class="btn btn-primary navbar-btn" style="position: fixed; right: 0; top: 30%; -ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg);transform-origin: right bottom;">
+    <button id="panelInstructionMaximizer" class="btn btn-primary navbar-btn" style="position: fixed; right: 0; top: 30%; margin: 0; -ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg); transform-origin: right bottom; -ms-transform-origin: right bottom; -webkit-transform-origin: right bottom;">
         <span><i class="glyphicon glyphicon glyphicon-list-alt"></i> &nbsp; Instructions &nbsp;</span>
     </button>
 
