--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -26,7 +26,7 @@
                 <div class=" navbar-nav navbar-right">
 
                     <result participation="$ctrl.participation" ng-hide="$ctrl.isBuilding"
-                            on-new-result="$ctrl.updateLatestResult($event)" show-score="true"></result>
+                            on-new-result="$ctrl.updateLatestResult($event)" show-score="true" show-artifact="false"></result>
 
                     <button id="umlSaveButton" type="button" class="btn btn-primary navbar-btn">
                         <span id="umlSaveButtonText"><i class="fa fa-play-circle-o"></i> Save & Run Tests</span>
