Added cleanup logging

--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -243,8 +243,8 @@
                 JhiWebsocketService.unsubscribe(websocketChannelUml);
                 JhiWebsocketService.unsubscribe(websocketChannelResult);
                 errorImportTrigger = null;
-                UmlClassEditor.stopUmlEditor();
-                console.log("Removed UmlEditor. cleanup done.")
+                var reactCleanupSuccessful = UmlClassEditor.stopUmlEditor();
+                console.log("Removed UmlEditor. cleanup done. React cleanup successful: "+reactCleanupSuccessful);
             });
 
 
