--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -163,7 +163,7 @@
             //
             // Connect to business logic of UML Editor
             //
-            var triggerFuncs = UmlClassEditor.startUmlEditor(loadFile, saveAndCommitFile, true, "/static/uml-editor/img/");
+            var triggerFuncs = UmlClassEditor.startUmlEditor(loadFile, saveAndCommitFile, true, "/static/uml-editor/img/", false);
             var saveTrigger = triggerFuncs[0];
             var errorImportTrigger = triggerFuncs[1];
 
