minor js improvements

--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -23,8 +23,9 @@
             </div>
             <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed">
 
-                <div class=" navbar-nav navbar-right">
+                <div class="navbar-nav navbar-right">
 
+                    <span>Parity with Sample Solution: &nbsp;</span>
                     <umlresult participation="$ctrl.participation" ng-hide="$ctrl.isBuilding"
                             on-new-result="$ctrl.updateLatestResult($event)" show-build-date="false" load-details="true"></umlresult>
 
